--- a/jax_yaw_opt.ipynb
+++ b/jax_yaw_opt.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2026-02-12T13:53:00.282367100Z",
-     "start_time": "2026-02-12T13:53:00.127567Z"
+     "end_time": "2026-02-15T14:06:39.679186500Z",
+     "start_time": "2026-02-15T14:06:38.026441200Z"
     }
    },
    "source": [
@@ -20,8 +20,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-12T13:56:18.200061900Z",
-     "start_time": "2026-02-12T13:56:18.009390700Z"
+     "end_time": "2026-02-15T14:55:58.422186Z",
+     "start_time": "2026-02-15T14:55:58.214630600Z"
     }
    },
    "cell_type": "code",
@@ -32,20 +32,37 @@
     "import jax\n",
     "from pathlib import Path\n",
     "from diffwake.diffwake_jax.model_agnostic import load_input, create_state, turbine_powers, alter_yaw_angles\n",
-    "from diffwake.diffwake_jax.sim_agnostic import simulate\n",
+    "from diffwake.diffwake_jax.sim_agnostic import simulate, simulate_simp\n",
     "from diffwake.diffwake_jax.turbine.operation_models import power as power_fn\n",
     "from floris import FlorisModel, TimeSeries\n",
     "import numpy as np\n",
     "import time\n",
     "\n",
     "\n",
-    "# helper function\n",
+    "# helper functions\n",
     "def absolute_percentage_difference(a, b):\n",
-    "    return jnp.abs((a - b) / b) * 100"
+    "    return jnp.abs((a - b) / b) * 100\n",
+    "\n",
+    "def set_dtype():\n",
+    "    return jnp.float64 if jax.config.x64_enabled else jnp.float32\n",
+    "\n",
+    "# Enable x64 on JAX if possible\n",
+    "jax.config.update(\"jax_enable_x64\", True)\n",
+    "\n",
+    "DTYPE = set_dtype()\n",
+    "print(f\"Current floating point precision: {DTYPE}\")"
    ],
    "id": "2848c693e827c844",
-   "outputs": [],
-   "execution_count": 10
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current floating point precision: <class 'jax.numpy.float64'>\n"
+     ]
+    }
+   ],
+   "execution_count": 93
   },
   {
    "metadata": {},
@@ -56,15 +73,16 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-12T13:56:19.476680700Z",
-     "start_time": "2026-02-12T13:56:18.239124900Z"
+     "end_time": "2026-02-15T15:56:43.690077400Z",
+     "start_time": "2026-02-15T15:56:42.441549Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# 1. Define paths to configuration files\n",
+    "wake_model = \"gauss\"\n",
     "data_dir = Path(\"data/horn\")\n",
-    "farm_cfg_path = data_dir / \"gauss_hornsRev.yaml\"\n",
+    "farm_cfg_path = data_dir / f\"{wake_model}_hornsRev.yaml\"\n",
     "turbine_cfg_path = data_dir / \"vestas_v802MW.yaml\"\n",
     "\n",
     "# 2. Load the base configuration\n",
@@ -74,13 +92,13 @@
     "ws = 13.5\n",
     "wd = 270.0\n",
     "ti_val = 0.06\n",
-    "layout_x = jnp.array([0.0, 400.0, 800.0])\n",
-    "layout_y = jnp.array([0.0, 0.0, 0.0])\n",
+    "layout_x = jnp.array([0.0, 400.0, 800.0], dtype=DTYPE)\n",
+    "layout_y = jnp.array([0.0, 0.0, 0.0], dtype=DTYPE)\n",
     "\n",
     "# 4. Define flow conditions\n",
-    "wind_speed = jnp.array([ws])\n",
-    "wind_dir = jnp.array([jnp.deg2rad(wd)]) # Wind from West\n",
-    "ti = jnp.array([ti_val])\n",
+    "wind_speed = jnp.array([ws], dtype=DTYPE)\n",
+    "wind_dir = jnp.array([jnp.deg2rad(wd)], dtype=DTYPE) # Wind from West\n",
+    "ti = jnp.array([ti_val], dtype=DTYPE)\n",
     "\n",
     "# 5. Update the configuration\n",
     "cfg = cfg.set(\n",
@@ -95,7 +113,7 @@
     "state = create_state(cfg)\n",
     "\n",
     "# --- Baseline: Unyawed Farm ---\n",
-    "yaw_angles_unyawed = jnp.zeros((1, 3)) # (n_findex, n_turbines)\n",
+    "yaw_angles_unyawed = jnp.zeros((1, 3), dtype=DTYPE) # (n_findex, n_turbines)\n",
     "state_unyawed = alter_yaw_angles(yaw_angles_unyawed, state)\n",
     "result_unyawed = simulate(state_unyawed)\n",
     "unyawed_turbine_powers = power_fn(power_thrust_table=state.farm.power_thrust_table,\n",
@@ -104,43 +122,26 @@
     "                                  yaw_angles=state.farm.yaw_angles,)\n",
     "unyawed_farm_power = jnp.sum(unyawed_turbine_powers)/1e6 # convert to megawatts\n",
     "\n",
+    "\n",
     "# state_final_unyawed = state_unyawed.replace(flow=state_unyawed.flow.replace(u=result_unyawed.u_sorted))\n",
     "# powers_unyawed = turbine_powers(state_final_unyawed)[0] # First (and only) wind condition\n",
     "\n",
     "# # --- Case: Yawed Farm ---\n",
-    "y1, y2, y3 = 20.0, 10.0, 0.0\n",
-    "yaw_angles_deg = jnp.array([[y1, y2, y3]]) # Try steering wakes away from downstream turbines\n",
+    "y1, y2, y3 = 35.0, 10.0, 0.0\n",
+    "yaw_angles_deg = jnp.array([[y1, y2, y3]], dtype=DTYPE) # Try steering wakes away from downstream turbines\n",
     "yaw_angles_rad = jnp.deg2rad(yaw_angles_deg)\n",
     "\n",
     "state_yawed = alter_yaw_angles(yaw_angles_rad, state)\n",
-    "\n",
     "result_yawed = simulate(state_yawed)\n",
-    "yawed_turbine_powers = power_fn(power_thrust_table=state.farm.power_thrust_table,\n",
+    "yawed_turbine_powers = power_fn(power_thrust_table=state_yawed.farm.power_thrust_table,\n",
     "                                  velocities=result_yawed.u_sorted,\n",
-    "                                  air_density=state.flow.air_density,\n",
-    "                                  yaw_angles=state.farm.yaw_angles,)\n",
-    "yawed_farm_power = jnp.sum(yawed_turbine_powers)/1e6"
-   ],
-   "id": "116c16e5f490e8",
-   "outputs": [],
-   "execution_count": 11
-  },
-  {
-   "metadata": {},
-   "cell_type": "markdown",
-   "source": "## FLORIS yaw",
-   "id": "922ff81e076ad978"
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2026-02-12T13:56:20.384881500Z",
-     "start_time": "2026-02-12T13:56:19.909317200Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "fmodel = FlorisModel(r\"../floris/examples/inputs/gauss_vesta.yaml\")\n",
+    "                                  air_density=state_yawed.flow.air_density,\n",
+    "                                  yaw_angles=state_yawed.farm.yaw_angles,)\n",
+    "yawed_farm_power = jnp.sum(yawed_turbine_powers)/1e6\n",
+    "\n",
+    "\n",
+    "# FLORIS YAW\n",
+    "fmodel = FlorisModel(rf\"../floris/examples/inputs/{wake_model}_vesta.yaml\")\n",
     "\n",
     "floris_yaw_angles = np.array([y1, y2, y3]).reshape(1, -1)\n",
     "time_series = TimeSeries(\n",
@@ -162,32 +163,39 @@
     "# yawed case\n",
     "fmodel.set(yaw_angles=floris_yaw_angles)\n",
     "fmodel.run()\n",
-    "floris_yawed_power = fmodel.get_farm_power() / 1e6"
+    "floris_yawed_power = fmodel.get_farm_power() / 1e6\n",
+    "turbine_powers_floris_yawed = fmodel.get_turbine_powers()"
    ],
-   "id": "3171bc1136c60a90",
+   "id": "116c16e5f490e8",
    "outputs": [],
-   "execution_count": 12
+   "execution_count": 103
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-12T13:56:20.606999400Z",
-     "start_time": "2026-02-12T13:56:20.408898900Z"
+     "end_time": "2026-02-15T15:56:50.258071800Z",
+     "start_time": "2026-02-15T15:56:50.012568500Z"
     }
    },
    "cell_type": "code",
    "source": [
     "print(f\"----- FLORIS results -----\")\n",
     "print(f\"Baseline farm power: {floris_baseline_power[0]:.6f} MW\")\n",
-    "print(f\"Yawed farm power: {floris_yawed_power[0]:.6f} MW\\n\")\n",
+    "print(f\"Turbine powers: {[i.item() for i in turbine_powers_floris[0]]}\" )\n",
+    "print(f\"Yawed farm power: {floris_yawed_power[0]:.6f} MW\")\n",
+    "print(f\"Turbine powers: {[i.item() for i in turbine_powers_floris_yawed[0]]}\\n\" )\n",
+    "\n",
     "\n",
     "print(f\"----- DiffWake results -----\")\n",
     "print(f\"Baseline farm power: {unyawed_farm_power:.6f} MW\")\n",
+    "print(f\"Turbine powers: {[i.item() for i in unyawed_turbine_powers[0]]}\" )\n",
     "print(f\"Yawed farm power: {yawed_farm_power:.6f} MW\")\n",
+    "print(f\"Turbine powers: {[i.item() for i in yawed_turbine_powers[0]]}\" )\n",
+    "\n",
     "\n",
     "print(\"\\n---------- Differences ----------\")\n",
-    "print(f\"Absolute baseline power difference (GCH) = {absolute_percentage_difference(floris_baseline_power, unyawed_farm_power)[0]:.4f}%\")\n",
-    "print(f\"Absolute yawed power difference (GCH) = {absolute_percentage_difference(floris_yawed_power, yawed_farm_power)[0]:.4f}%\")"
+    "print(f\"Absolute baseline power difference (GCH) = {absolute_percentage_difference(floris_baseline_power, unyawed_farm_power)[0]:.8f}%\")\n",
+    "print(f\"Absolute yawed power difference (GCH) = {absolute_percentage_difference(floris_yawed_power, yawed_farm_power)[0]:.8f}%\")"
    ],
    "id": "e2ca0f2fe7b91fa",
    "outputs": [
@@ -197,19 +205,23 @@
      "text": [
       "----- FLORIS results -----\n",
       "Baseline farm power: 4.836709 MW\n",
-      "Yawed farm power: 5.102339 MW\n",
+      "Turbine powers: [1972125.6058977128, 1663348.6365516074, 1201235.1647396581]\n",
+      "Yawed farm power: 5.141033 MW\n",
+      "Turbine powers: [1843010.5386453331, 1838930.8363115978, 1459091.9864042029]\n",
       "\n",
       "----- DiffWake results -----\n",
       "Baseline farm power: 4.836627 MW\n",
-      "Yawed farm power: 5.261699 MW\n",
+      "Turbine powers: [1972125.6058977128, 1663348.6634779854, 1201152.8269721586]\n",
+      "Yawed farm power: 5.231695 MW\n",
+      "Turbine powers: [1843010.5386453327, 1793881.6633172126, 1594803.2394806168]\n",
       "\n",
       "---------- Differences ----------\n",
-      "Absolute baseline power difference (GCH) = 0.0017%\n",
-      "Absolute yawed power difference (GCH) = 3.0287%\n"
+      "Absolute baseline power difference (GCH) = 0.00170182%\n",
+      "Absolute yawed power difference (GCH) = 1.73293880%\n"
      ]
     }
    ],
-   "execution_count": 13
+   "execution_count": 104
   },
   {
    "metadata": {},
@@ -217,7 +229,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "b3bdb51b73074b11"
+   "id": "feac46740d5c072f"
   }
  ],
  "metadata": {
