runtime-accuracy analysis done

--- a/jax_yaw_opt.ipynb
+++ b/jax_yaw_opt.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2026-02-16T12:15:51.268038800Z",
-     "start_time": "2026-02-16T12:15:49.358590100Z"
+     "end_time": "2026-02-17T11:50:07.843100200Z",
+     "start_time": "2026-02-17T11:50:07.688148100Z"
     }
    },
    "source": [
@@ -20,8 +20,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-15T14:55:58.422186Z",
-     "start_time": "2026-02-15T14:55:58.214630600Z"
+     "end_time": "2026-02-17T11:50:10.649919100Z",
+     "start_time": "2026-02-17T11:50:07.843603100Z"
     }
    },
    "cell_type": "code",
@@ -34,6 +34,7 @@
     "from diffwake.diffwake_jax.model_agnostic import load_input, create_state, turbine_powers, alter_yaw_angles\n",
     "from diffwake.diffwake_jax.sim_agnostic import simulate, simulate_simp\n",
     "from diffwake.diffwake_jax.turbine.operation_models import power as power_fn\n",
+    "from diffwake.diffwake_jax.util_agnostic import set_precision\n",
     "from floris import FlorisModel, TimeSeries\n",
     "import numpy as np\n",
     "import time\n",
@@ -43,13 +44,8 @@
     "def absolute_percentage_difference(a, b):\n",
     "    return jnp.abs((a - b) / b) * 100\n",
     "\n",
-    "def set_dtype():\n",
-    "    return jnp.float64 if jax.config.x64_enabled else jnp.float32\n",
     "\n",
-    "# Enable x64 on JAX if possible\n",
-    "jax.config.update(\"jax_enable_x64\", True)\n",
-    "\n",
-    "DTYPE = set_dtype()\n",
+    "DTYPE = set_precision(\"float32\")\n",
     "print(f\"Current floating point precision: {DTYPE}\")"
    ],
    "id": "2848c693e827c844",
@@ -58,11 +54,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current floating point precision: <class 'jax.numpy.float64'>\n"
+      "Current floating point precision: <class 'jax.numpy.float32'>\n"
      ]
     }
    ],
-   "execution_count": 93
+   "execution_count": 2
   },
   {
    "metadata": {},
