hr1 yawed comparison

--- a/jax_yaw_opt.ipynb
+++ b/jax_yaw_opt.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2026-02-17T11:50:07.843100200Z",
-     "start_time": "2026-02-17T11:50:07.688148100Z"
+     "end_time": "2026-02-17T13:58:13.887094500Z",
+     "start_time": "2026-02-17T13:58:13.197961100Z"
     }
    },
    "source": [
@@ -20,8 +20,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-17T11:50:10.649919100Z",
-     "start_time": "2026-02-17T11:50:07.843603100Z"
+     "end_time": "2026-02-17T14:12:12.375768800Z",
+     "start_time": "2026-02-17T14:12:12.131029700Z"
     }
    },
    "cell_type": "code",
@@ -58,7 +58,7 @@
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 19
   },
   {
    "metadata": {},
@@ -69,8 +69,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-15T15:56:43.690077400Z",
-     "start_time": "2026-02-15T15:56:42.441549Z"
+     "end_time": "2026-02-17T14:21:56.816542200Z",
+     "start_time": "2026-02-17T14:21:51.880262400Z"
     }
    },
    "cell_type": "code",
@@ -82,7 +82,7 @@
     "turbine_cfg_path = data_dir / \"vestas_v802MW.yaml\"\n",
     "\n",
     "# 2. Load the base configuration\n",
-    "cfg = load_input(farm_cfg_path, turbine_cfg_path)\n",
+    "base_cfg = load_input(farm_cfg_path, turbine_cfg_path)\n",
     "\n",
     "# 3. Define a simple 3-turbine layout (aligned along the X-axis)\n",
     "ws = 13.5\n",
@@ -97,7 +97,7 @@
     "ti = jnp.array([ti_val], dtype=DTYPE)\n",
     "\n",
     "# 5. Update the configuration\n",
-    "cfg = cfg.set(\n",
+    "cfg = base_cfg.set(\n",
     "    layout_x=layout_x,\n",
     "    layout_y=layout_y,\n",
     "    wind_speeds=wind_speed,\n",
@@ -105,22 +105,37 @@
     "    turbulence_intensities=ti\n",
     ")\n",
     "\n",
+    "hr1_cfg = base_cfg.set(\n",
+    "    wind_speeds=wind_speed,\n",
+    "    wind_directions=wind_dir,\n",
+    "    turbulence_intensities=ti\n",
+    ")\n",
+    "\n",
     "# 6. Create the simulation state\n",
     "state = create_state(cfg)\n",
+    "hr1_state = create_state(hr1_cfg)\n",
     "\n",
     "# --- Baseline: Unyawed Farm ---\n",
     "yaw_angles_unyawed = jnp.zeros((1, 3), dtype=DTYPE) # (n_findex, n_turbines)\n",
+    "hr1_yaw_angles_unyawed = jnp.zeros((1, 80), dtype=DTYPE)\n",
+    "\n",
     "state_unyawed = alter_yaw_angles(yaw_angles_unyawed, state)\n",
+    "hr1_state_unyawed = alter_yaw_angles(hr1_yaw_angles_unyawed, hr1_state)\n",
+    "\n",
     "result_unyawed = simulate(state_unyawed)\n",
-    "unyawed_turbine_powers = power_fn(power_thrust_table=state.farm.power_thrust_table,\n",
+    "hr1_result_unyawed = simulate(hr1_state)\n",
+    "\n",
+    "unyawed_turbine_powers = power_fn(power_thrust_table=state_unyawed.farm.power_thrust_table,\n",
     "                                  velocities=result_unyawed.u_sorted,\n",
-    "                                  air_density=state.flow.air_density,\n",
-    "                                  yaw_angles=state.farm.yaw_angles,)\n",
+    "                                  air_density=state_unyawed.flow.air_density,\n",
+    "                                  yaw_angles=state_unyawed.farm.yaw_angles,)\n",
+    "unyawed_hr1_turbine_powers = power_fn(power_thrust_table=hr1_state_unyawed.farm.power_thrust_table,\n",
+    "                                      velocities=hr1_result_unyawed.u_sorted,\n",
+    "                                      air_density=hr1_state_unyawed.flow.air_density,\n",
+    "                                      yaw_angles=hr1_state_unyawed.farm.yaw_angles)\n",
+    "\n",
     "unyawed_farm_power = jnp.sum(unyawed_turbine_powers)/1e6 # convert to megawatts\n",
-    "\n",
-    "\n",
-    "# state_final_unyawed = state_unyawed.replace(flow=state_unyawed.flow.replace(u=result_unyawed.u_sorted))\n",
-    "# powers_unyawed = turbine_powers(state_final_unyawed)[0] # First (and only) wind condition\n",
+    "unyawed_hr1_farm_power = jnp.sum(unyawed_hr1_turbine_powers)/1e6\n",
     "\n",
     "# # --- Case: Yawed Farm ---\n",
     "y1, y2, y3 = 35.0, 10.0, 0.0\n",
@@ -135,42 +150,66 @@
     "                                  yaw_angles=state_yawed.farm.yaw_angles,)\n",
     "yawed_farm_power = jnp.sum(yawed_turbine_powers)/1e6\n",
     "\n",
+    "# Yawing HR1\n",
+    "hr1_yaw_angles_deg = jnp.concat([jnp.full((1, 70), 10, dtype=DTYPE), jnp.zeros((1, 10), dtype=DTYPE)], axis=1)\n",
+    "hr1_yaw_angles_rad = jnp.deg2rad(hr1_yaw_angles_deg)\n",
+    "\n",
+    "hr1_state_yawed = alter_yaw_angles(hr1_yaw_angles_rad, hr1_state)\n",
+    "hr1_result_yawed = simulate(hr1_state_yawed)\n",
+    "hr1_yawed_turbine_powers = power_fn(power_thrust_table=hr1_state_yawed.farm.power_thrust_table,\n",
+    "                                    velocities=hr1_result_yawed.u_sorted,\n",
+    "                                    air_density=hr1_state_yawed.flow.air_density,\n",
+    "                                    yaw_angles=hr1_state_yawed.farm.yaw_angles)\n",
+    "yawed_hr1_farm_power = jnp.sum(hr1_yawed_turbine_powers)/1e6\n",
     "\n",
     "# FLORIS YAW\n",
     "fmodel = FlorisModel(rf\"../floris/examples/inputs/{wake_model}_vesta.yaml\")\n",
+    "hr1_fmodel = FlorisModel(rf\"../floris/examples/inputs/{wake_model}_vesta.yaml\")\n",
     "\n",
     "floris_yaw_angles = np.array([y1, y2, y3]).reshape(1, -1)\n",
+    "hr1_floris_yaw_angles = np.concat([np.full((1, 70), 10), jnp.zeros((1, 10))], axis=1)\n",
+    "\n",
     "time_series = TimeSeries(\n",
     "    wind_directions=np.array([wd]),\n",
     "    wind_speeds=np.array([ws]),\n",
     "    turbulence_intensities=ti_val,\n",
     ")\n",
+    "hr1_fmodel.set(wind_data=time_series,\n",
+    "               yaw_angles=np.zeros((1, 80)))\n",
     "\n",
     "fmodel.set(wind_data=time_series,\n",
     "           layout_x=np.array([0.0, 400.0, 800.0]),\n",
     "           layout_y=np.array([0.0, 0.0, 0.0]),\n",
     "           yaw_angles=np.zeros_like(floris_yaw_angles))\n",
     "fmodel.run()\n",
+    "hr1_fmodel.run()\n",
     "\n",
     "# baseline case\n",
     "floris_baseline_power = fmodel.get_farm_power() / 1e6\n",
+    "hr1_floris_baseline_power = hr1_fmodel.get_farm_power() / 1e6\n",
     "turbine_powers_floris = fmodel.get_turbine_powers()\n",
+    "hr1_turbine_powers_floris = hr1_fmodel.get_turbine_powers()\n",
+    "\n",
     "\n",
     "# yawed case\n",
+    "hr1_fmodel.set(yaw_angles=hr1_floris_yaw_angles)\n",
     "fmodel.set(yaw_angles=floris_yaw_angles)\n",
+    "hr1_fmodel.run()\n",
     "fmodel.run()\n",
     "floris_yawed_power = fmodel.get_farm_power() / 1e6\n",
-    "turbine_powers_floris_yawed = fmodel.get_turbine_powers()"
+    "turbine_powers_floris_yawed = fmodel.get_turbine_powers()\n",
+    "hr1_floris_yawed_power = hr1_fmodel.get_farm_power() / 1e6\n",
+    "hr1_turbine_powers_floris_yawed = hr1_fmodel.get_turbine_powers()"
    ],
    "id": "116c16e5f490e8",
    "outputs": [],
-   "execution_count": 103
+   "execution_count": 25
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-15T15:56:50.258071800Z",
-     "start_time": "2026-02-15T15:56:50.012568500Z"
+     "end_time": "2026-02-17T14:25:54.634079300Z",
+     "start_time": "2026-02-17T14:25:54.314578Z"
     }
    },
    "cell_type": "code",
@@ -182,16 +221,32 @@
     "print(f\"Turbine powers: {[i.item() for i in turbine_powers_floris_yawed[0]]}\\n\" )\n",
     "\n",
     "\n",
-    "print(f\"----- DiffWake results -----\")\n",
+    "print(f\"----- DiffWake results  -----\")\n",
     "print(f\"Baseline farm power: {unyawed_farm_power:.6f} MW\")\n",
     "print(f\"Turbine powers: {[i.item() for i in unyawed_turbine_powers[0]]}\" )\n",
     "print(f\"Yawed farm power: {yawed_farm_power:.6f} MW\")\n",
-    "print(f\"Turbine powers: {[i.item() for i in yawed_turbine_powers[0]]}\" )\n",
+    "print(f\"Turbine powers: {[i.item() for i in yawed_turbine_powers[0]]}\\n\" )\n",
     "\n",
-    "\n",
+    "print(\"---------- Differences ----------\")\n",
+    "print(f\"Absolute baseline power difference (GCH) = {absolute_percentage_difference(floris_baseline_power, unyawed_farm_power)[0]:.6f}%\")\n",
+    "print(f\"Absolute yawed power difference (GCH) = {absolute_percentage_difference(floris_yawed_power, yawed_farm_power)[0]:.6f}%\")\n",
+    "print(\"=\"*100)\n",
+    "print(f\"----- FLORIS results (Horns Rev 1)-----\")\n",
+    "print(f\"Baseline farm power: {hr1_floris_baseline_power[0]:.6f} MW\")\n",
+    "# print(f\"Turbine powers: {[i.item() for i in turbine_powers_floris[0]]}\" )\n",
+    "print(f\"Yawed farm power: {hr1_floris_yawed_power[0]:.6f} MW\\n\")\n",
+    "# print(f\"Turbine powers: {[i.item() for i in turbine_powers_floris_yawed[0]]}\\n\" )\n",
+    "unyawed_farm_power\n",
+    "print(f\"----- DiffWake results (Horns Rev 1) -----\")\n",
+    "print(f\"Baseline farm power: {unyawed_hr1_farm_power:.6f} MW\")\n",
+    "# print(f\"Turbine powers: {[i.item() for i in unyawed_turbine_powers[0]]}\" )\n",
+    "print(f\"Yawed farm power: {yawed_hr1_farm_power:.6f} MW\")\n",
+    "# print(f\"Turbine powers: {[i.item() for i in yawed_turbine_powers[0]]}\" )\n",
     "print(\"\\n---------- Differences ----------\")\n",
-    "print(f\"Absolute baseline power difference (GCH) = {absolute_percentage_difference(floris_baseline_power, unyawed_farm_power)[0]:.8f}%\")\n",
-    "print(f\"Absolute yawed power difference (GCH) = {absolute_percentage_difference(floris_yawed_power, yawed_farm_power)[0]:.8f}%\")"
+    "print(f\"Absolute baseline power difference (GCH) = {absolute_percentage_difference(hr1_floris_baseline_power, unyawed_hr1_farm_power)[0]:.6f}%\")\n",
+    "print(f\"Absolute yawed power difference (GCH) = {absolute_percentage_difference(hr1_floris_yawed_power, yawed_hr1_farm_power)[0]:.6f}%\")\n",
+    "\n",
+    "\n"
    ],
    "id": "e2ca0f2fe7b91fa",
    "outputs": [
@@ -205,19 +260,31 @@
       "Yawed farm power: 5.141033 MW\n",
       "Turbine powers: [1843010.5386453331, 1838930.8363115978, 1459091.9864042029]\n",
       "\n",
-      "----- DiffWake results -----\n",
-      "Baseline farm power: 4.836627 MW\n",
-      "Turbine powers: [1972125.6058977128, 1663348.6634779854, 1201152.8269721586]\n",
+      "----- DiffWake results  -----\n",
+      "Baseline farm power: 4.836628 MW\n",
+      "Turbine powers: [1972125.625, 1663349.125, 1201153.375]\n",
       "Yawed farm power: 5.231695 MW\n",
-      "Turbine powers: [1843010.5386453327, 1793881.6633172126, 1594803.2394806168]\n",
+      "Turbine powers: [1843010.75, 1793881.875, 1594802.75]\n",
       "\n",
       "---------- Differences ----------\n",
-      "Absolute baseline power difference (GCH) = 0.00170182%\n",
-      "Absolute yawed power difference (GCH) = 1.73293880%\n"
+      "Absolute baseline power difference (GCH) = 0.001686%\n",
+      "Absolute yawed power difference (GCH) = 1.732937%\n",
+      "====================================================================================================\n",
+      "----- FLORIS results (Horns Rev 1)-----\n",
+      "Baseline farm power: 142.660633 MW\n",
+      "Yawed farm power: 146.218701 MW\n",
+      "\n",
+      "----- DiffWake results (Horns Rev 1) -----\n",
+      "Baseline farm power: 142.646271 MW\n",
+      "Yawed farm power: 148.610336 MW\n",
+      "\n",
+      "---------- Differences ----------\n",
+      "Absolute baseline power difference (GCH) = 0.010066%\n",
+      "Absolute yawed power difference (GCH) = 1.609331%\n"
      ]
     }
    ],
-   "execution_count": 104
+   "execution_count": 31
   },
   {
    "metadata": {},
