--- a/jax_yaw_opt.ipynb
+++ b/jax_yaw_opt.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2026-02-17T13:58:13.887094500Z",
-     "start_time": "2026-02-17T13:58:13.197961100Z"
+     "end_time": "2026-02-17T15:45:27.048492200Z",
+     "start_time": "2026-02-17T15:45:26.916593300Z"
     }
    },
    "source": [
@@ -20,8 +20,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-17T14:12:12.375768800Z",
-     "start_time": "2026-02-17T14:12:12.131029700Z"
+     "end_time": "2026-02-17T15:48:06.310520700Z",
+     "start_time": "2026-02-17T15:48:06.171531400Z"
     }
    },
    "cell_type": "code",
@@ -45,7 +45,7 @@
     "    return jnp.abs((a - b) / b) * 100\n",
     "\n",
     "\n",
-    "DTYPE = set_precision(\"float32\")\n",
+    "DTYPE = set_precision(\"float64\")\n",
     "print(f\"Current floating point precision: {DTYPE}\")"
    ],
    "id": "2848c693e827c844",
@@ -54,11 +54,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current floating point precision: <class 'jax.numpy.float32'>\n"
+      "Current floating point precision: <class 'jax.numpy.float64'>\n"
      ]
     }
    ],
-   "execution_count": 19
+   "execution_count": 14
   },
   {
    "metadata": {},
@@ -69,14 +69,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-17T14:21:56.816542200Z",
-     "start_time": "2026-02-17T14:21:51.880262400Z"
+     "end_time": "2026-02-17T15:48:16.154477900Z",
+     "start_time": "2026-02-17T15:48:06.582242500Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# 1. Define paths to configuration files\n",
-    "wake_model = \"gauss\"\n",
+    "wake_model = \"cc\"\n",
     "data_dir = Path(\"data/horn\")\n",
     "farm_cfg_path = data_dir / f\"{wake_model}_hornsRev.yaml\"\n",
     "turbine_cfg_path = data_dir / \"vestas_v802MW.yaml\"\n",
@@ -167,7 +167,7 @@
     "hr1_fmodel = FlorisModel(rf\"../floris/examples/inputs/{wake_model}_vesta.yaml\")\n",
     "\n",
     "floris_yaw_angles = np.array([y1, y2, y3]).reshape(1, -1)\n",
-    "hr1_floris_yaw_angles = np.concat([np.full((1, 70), 10), jnp.zeros((1, 10))], axis=1)\n",
+    "hr1_floris_yaw_angles = np.concat([np.full((1, 70), 10), np.zeros((1, 10))], axis=1)\n",
     "\n",
     "time_series = TimeSeries(\n",
     "    wind_directions=np.array([wd]),\n",
@@ -203,13 +203,13 @@
    ],
    "id": "116c16e5f490e8",
    "outputs": [],
-   "execution_count": 25
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-17T14:25:54.634079300Z",
-     "start_time": "2026-02-17T14:25:54.314578Z"
+     "end_time": "2026-02-17T15:48:16.894846300Z",
+     "start_time": "2026-02-17T15:48:16.439549900Z"
     }
    },
    "cell_type": "code",
@@ -236,16 +236,15 @@
     "# print(f\"Turbine powers: {[i.item() for i in turbine_powers_floris[0]]}\" )\n",
     "print(f\"Yawed farm power: {hr1_floris_yawed_power[0]:.6f} MW\\n\")\n",
     "# print(f\"Turbine powers: {[i.item() for i in turbine_powers_floris_yawed[0]]}\\n\" )\n",
-    "unyawed_farm_power\n",
+    "\n",
     "print(f\"----- DiffWake results (Horns Rev 1) -----\")\n",
     "print(f\"Baseline farm power: {unyawed_hr1_farm_power:.6f} MW\")\n",
     "# print(f\"Turbine powers: {[i.item() for i in unyawed_turbine_powers[0]]}\" )\n",
     "print(f\"Yawed farm power: {yawed_hr1_farm_power:.6f} MW\")\n",
     "# print(f\"Turbine powers: {[i.item() for i in yawed_turbine_powers[0]]}\" )\n",
     "print(\"\\n---------- Differences ----------\")\n",
-    "print(f\"Absolute baseline power difference (GCH) = {absolute_percentage_difference(hr1_floris_baseline_power, unyawed_hr1_farm_power)[0]:.6f}%\")\n",
-    "print(f\"Absolute yawed power difference (GCH) = {absolute_percentage_difference(hr1_floris_yawed_power, yawed_hr1_farm_power)[0]:.6f}%\")\n",
-    "\n",
+    "print(f\"Absolute baseline power difference ({wake_model}) = {absolute_percentage_difference(hr1_floris_baseline_power, unyawed_hr1_farm_power)[0]:.6f}%\")\n",
+    "print(f\"Absolute yawed power difference ({wake_model}) = {absolute_percentage_difference(hr1_floris_yawed_power, yawed_hr1_farm_power)[0]:.6f}%\")\n",
     "\n"
    ],
    "id": "e2ca0f2fe7b91fa",
@@ -255,36 +254,49 @@
      "output_type": "stream",
      "text": [
       "----- FLORIS results -----\n",
-      "Baseline farm power: 4.836709 MW\n",
-      "Turbine powers: [1972125.6058977128, 1663348.6365516074, 1201235.1647396581]\n",
-      "Yawed farm power: 5.141033 MW\n",
-      "Turbine powers: [1843010.5386453331, 1838930.8363115978, 1459091.9864042029]\n",
+      "Baseline farm power: 4.407514 MW\n",
+      "Turbine powers: [1972125.6058977128, 1629458.9911843056, 805929.0592101549]\n",
+      "Yawed farm power: 4.668296 MW\n",
+      "Turbine powers: [1843010.5386453331, 1829368.9173399047, 995916.6654495547]\n",
       "\n",
       "----- DiffWake results  -----\n",
-      "Baseline farm power: 4.836628 MW\n",
-      "Turbine powers: [1972125.625, 1663349.125, 1201153.375]\n",
-      "Yawed farm power: 5.231695 MW\n",
-      "Turbine powers: [1843010.75, 1793881.875, 1594802.75]\n",
+      "Baseline farm power: 4.397713 MW\n",
+      "Turbine powers: [1972125.6058977128, 1629458.988632352, 796127.9570391176]\n",
+      "Yawed farm power: 4.764871 MW\n",
+      "Turbine powers: [1843010.5386453327, 1829368.9166461218, 1092491.9407999178]\n",
       "\n",
       "---------- Differences ----------\n",
-      "Absolute baseline power difference (GCH) = 0.001686%\n",
-      "Absolute yawed power difference (GCH) = 1.732937%\n",
+      "Absolute baseline power difference (GCH) = 0.222868%\n",
+      "Absolute yawed power difference (GCH) = 2.026818%\n",
       "====================================================================================================\n",
       "----- FLORIS results (Horns Rev 1)-----\n",
-      "Baseline farm power: 142.660633 MW\n",
-      "Yawed farm power: 146.218701 MW\n",
+      "Baseline farm power: 97.540232 MW\n",
+      "Yawed farm power: 98.852234 MW\n",
       "\n",
       "----- DiffWake results (Horns Rev 1) -----\n",
-      "Baseline farm power: 142.646271 MW\n",
-      "Yawed farm power: 148.610336 MW\n",
+      "Baseline farm power: 97.611131 MW\n",
+      "Yawed farm power: 103.147157 MW\n",
       "\n",
       "---------- Differences ----------\n",
-      "Absolute baseline power difference (GCH) = 0.010066%\n",
-      "Absolute yawed power difference (GCH) = 1.609331%\n"
+      "Absolute baseline power difference (cc) = 0.072634%\n",
+      "Absolute yawed power difference (cc = 4.163879%\n"
      ]
     }
    ],
-   "execution_count": 31
+   "execution_count": 16
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2026-02-17T15:39:52.974606300Z",
+     "start_time": "2026-02-17T15:39:52.954602600Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "feac46740d5c072f",
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "metadata": {},
@@ -292,7 +304,7 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "feac46740d5c072f"
+   "id": "6e1bcdfcf63a561b"
   }
  ],
  "metadata": {
