--- a/baseline.ipynb
+++ b/baseline.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-17T11:40:02.032294Z",
-     "start_time": "2026-02-17T11:40:01.806327400Z"
+     "end_time": "2026-02-18T14:09:14.803936600Z",
+     "start_time": "2026-02-18T14:09:14.615666600Z"
     }
    },
    "cell_type": "code",
@@ -21,8 +21,8 @@
    "id": "0f40c543",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-17T11:55:35.140102600Z",
-     "start_time": "2026-02-17T11:55:34.951344800Z"
+     "end_time": "2026-02-18T14:21:29.473180200Z",
+     "start_time": "2026-02-18T14:21:29.259236300Z"
     }
    },
    "source": [
@@ -60,11 +60,11 @@
     "\n",
     "\n",
     "# Wake model-agnostic edits to DiffWake\n",
-    "from diffwake.diffwake_jax.layout_runner_agnostic import make_layout_runner\n",
-    "from diffwake.diffwake_jax.model_agnostic import load_input, create_state, alter_yaw_angles\n",
-    "from diffwake.diffwake_jax.util_agnostic import average_velocity_jax, State, Result, set_cfg, Config, set_precision\n",
+    "from diffwake.diffwake_jax.layout_runner import make_layout_runner\n",
+    "from diffwake.diffwake_jax.model import load_input, create_state, alter_yaw_angles\n",
+    "from diffwake.diffwake_jax.util import average_velocity_jax, State, Result, set_cfg, Config, set_precision\n",
     "from diffwake.diffwake_jax.turbine.operation_models import power as power_fn\n",
-    "from diffwake.diffwake_jax.sim_agnostic import simulate_simp, simulate\n",
+    "from diffwake.diffwake_jax.simulator import simulate_simp, simulate\n",
     "from wrapper import DiffWakeParams, DiffWakeSimulation, DiffWakeConfig\n",
     "\n",
     "\n",
@@ -82,24 +82,31 @@
     "    else:\n",
     "        return arg\n",
     "\n",
-    "DTYPE = set_precision(\"bfloat16\")"
+    "DTYPE = set_precision(\"float32\")"
    ],
    "outputs": [],
-   "execution_count": 22
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-17T11:55:38.511898100Z",
-     "start_time": "2026-02-17T11:55:35.141099300Z"
+     "end_time": "2026-02-18T14:21:29.964225700Z",
+     "start_time": "2026-02-18T14:21:29.619958900Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "data_dir = Path(\"data/horn\")\n",
-    "cc_farm = \"cc_hornsRev.yaml\"\n",
-    "gch_farm = \"gauss_hornsRev.yaml\"\n",
+    "lo = 'horn'\n",
+    "# data_dir = Path(f\"data/{lo}\")\n",
+    "# cc_farm = f\"cc_{lo}sRev.yaml\"\n",
+    "# gch_farm = f\"gauss_{lo}sRev.yaml\"\n",
+    "# gen_file = \"vestas_v802MW.yaml\"\n",
+    "\n",
+    "data_dir = Path(f\"data/simple\")\n",
+    "cc_farm = f\"cc_simple.yaml\"\n",
+    "gch_farm = f\"gch_simple.yaml\"\n",
     "gen_file = \"vestas_v802MW.yaml\"\n",
+    "\n",
     "\n",
     "# Cartesian coordinates in metres\n",
     "override_layout = False\n",
@@ -147,8 +154,57 @@
     "gch_farm_power = gch_sim.get_farm_power()\n"
    ],
    "id": "476bf48af3f5bfde",
-   "outputs": [],
-   "execution_count": 23
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "v_wake after zeros:  (1, 3, 3, 3)\n",
+      "w_wake after zeros:  (1, 3, 3, 3)\n",
+      "v_wake after transverse velocities:  (1, 3, 3, 3)\n",
+      "w_wake after transverse velocities:  (1, 3, 3, 3)\n",
+      "u_i shape: (1, 1, 3, 3)\n",
+      "v_i shape: (1, 1, 3, 3)\n",
+      "ti_i shape: (1, 1, 3, 3)\n",
+      "w_i shape: (1, 1, 3, 3)\n",
+      "v_wake_i shape: (1, 1, 3, 3)\n",
+      "w_wake_i shape: (1, 1, 3, 3)\n",
+      "I_mixing shape: (1, 1, 1, 1)\n",
+      "ti_i shape: (1, 1, 3, 3)\n",
+      "Updated shape: (1, 1, 3, 3)\n",
+      "TI shape: (1, 3, 3, 3)\n",
+      "v_wake after zeros:  (1, 3, 3, 3)\n",
+      "w_wake after zeros:  (1, 3, 3, 3)\n",
+      "v_wake after transverse velocities:  (1, 3, 3, 3)\n",
+      "w_wake after transverse velocities:  (1, 3, 3, 3)\n",
+      "u_i shape: (1, 1, 3, 3)\n",
+      "v_i shape: (1, 1, 3, 3)\n",
+      "ti_i shape: (1, 1, 3, 3)\n",
+      "w_i shape: (1, 1, 3, 3)\n",
+      "v_wake_i shape: (1, 1, 3, 3)\n",
+      "w_wake_i shape: (1, 1, 3, 3)\n",
+      "I_mixing shape: (1, 1, 1, 1)\n",
+      "ti_i shape: (1, 1, 3, 3)\n",
+      "Updated shape: (1, 1, 3, 3)\n",
+      "TI shape: (1, 3, 3, 3)\n",
+      "v_wake after zeros:  (1, 3, 3, 3)\n",
+      "w_wake after zeros:  (1, 3, 3, 3)\n",
+      "v_wake after transverse velocities:  (1, 3, 3, 3)\n",
+      "w_wake after transverse velocities:  (1, 3, 3, 3)\n",
+      "u_i shape: (1, 1, 3, 3)\n",
+      "v_i shape: (1, 1, 3, 3)\n",
+      "ti_i shape: (1, 1, 3, 3)\n",
+      "w_i shape: (1, 1, 3, 3)\n",
+      "v_wake_i shape: (1, 1, 3, 3)\n",
+      "w_wake_i shape: (1, 1, 3, 3)\n",
+      "I_mixing shape: (1, 1, 1, 1)\n",
+      "ti_i shape: (1, 1, 3, 3)\n",
+      "Updated shape: (1, 1, 3, 3)\n",
+      "TI shape: (1, 3, 3, 3)\n"
+     ]
+    }
+   ],
+   "execution_count": 9
   },
   {
    "metadata": {},
@@ -159,8 +215,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2026-02-17T11:55:44.830929400Z",
-     "start_time": "2026-02-17T11:55:43.916342800Z"
+     "end_time": "2026-02-18T14:09:26.554742200Z",
+     "start_time": "2026-02-18T14:09:25.584039200Z"
     }
    },
    "cell_type": "code",
@@ -218,20 +274,20 @@
      "output_type": "stream",
      "text": [
       "---------- DiffWake JAX Results ----------\n",
-      "Total farm power with GCH (MW): 142.964\n",
-      "Total farm power with CC (MW): 98.106\n",
+      "Total farm power with GCH (MW): 142.646\n",
+      "Total farm power with CC (MW): 97.611\n",
       "\n",
       "---------- FLORIS Results ----------\n",
       "Total farm power with GCH (MW): 142.661\n",
       "Total farm power with CC (MW): 97.540\n",
       "\n",
       "---------- Differences ----------\n",
-      "Absolute farm power difference (GCH) = 0.212161%\n",
-      "Absolute farm power difference (CC) = 0.576951%\n"
+      "Absolute farm power difference (GCH) = 0.010066%\n",
+      "Absolute farm power difference (CC) = 0.072627%\n"
      ]
     }
    ],
-   "execution_count": 24
+   "execution_count": 4
   },
   {
    "metadata": {
@@ -593,7 +649,7 @@
     "\n",
     "\n",
     "# Set FP64\n",
-    "from diffwake.diffwake_jax.util_agnostic import set_precision\n",
+    "from diffwake.diffwake_jax.util import set_precision\n",
     "DTYPE = set_precision(\"fp64\")\n",
     "print(f\"Current floating point precision: {DTYPE}\")\n",
     "\n",
